--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -22,10 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b283e30d-d9f6-40a4-b174-8a88d655ae86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Whoa, that's a big one!\n"
+     ]
+    }
+   ],
    "source": [
     "x = 150\n",
     "\n",
@@ -43,10 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "eb5227e6-dfca-4010-8d82-1eb382f70a1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x > 100"
    ]
@@ -61,10 +80,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8bfc08a7-fe57-481b-99eb-49b3fbc7cd47",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is big, but not THAT big\n"
+     ]
+    }
+   ],
    "source": [
     "x = 150\n",
     "y = 200\n",
@@ -117,14 +144,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "5cfe9b80-f2ec-481f-9db5-bb6247b1b472",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#si-decibel\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m x = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x > \u001b[32m130\u001b[39m:\n\u001b[32m      6\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mLouder than jackhammer\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1396\u001b[39m, in \u001b[36mKernel.raw_input\u001b[39m\u001b[34m(self, prompt)\u001b[39m\n\u001b[32m   1394\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mraw_input was called, but this frontend does not support input requests.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m   1395\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m StdinNotImplementedError(msg)\n\u001b[32m-> \u001b[39m\u001b[32m1396\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_input_request\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   1397\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mprompt\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1398\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_get_shell_context_var\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_shell_parent_ident\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1399\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mget_parent\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mshell\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1400\u001b[39m \u001b[43m    \u001b[49m\u001b[43mpassword\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m   1401\u001b[39m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\ipykernel\\kernelbase.py:1441\u001b[39m, in \u001b[36mKernel._input_request\u001b[39m\u001b[34m(self, prompt, ident, parent, password)\u001b[39m\n\u001b[32m   1438\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[32m   1439\u001b[39m     \u001b[38;5;66;03m# re-raise KeyboardInterrupt, to truncate traceback\u001b[39;00m\n\u001b[32m   1440\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mInterrupted by user\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m-> \u001b[39m\u001b[32m1441\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m(msg) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m   1442\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[32m   1443\u001b[39m     \u001b[38;5;28mself\u001b[39m.log.warning(\u001b[33m\"\u001b[39m\u001b[33mInvalid Message:\u001b[39m\u001b[33m\"\u001b[39m, exc_info=\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: Interrupted by user"
+     ]
+    }
+   ],
    "source": [
     "#si-decibel\n",
     "\n",
-    "x = int(input())"
+    "x = int(input())\n",
+    "\n",
+    "if x > 130:\n",
+    "    print(\"Louder than jackhammer\")\n",
+    "elif x == 130:\n",
+    "    print(\"As loud as Jackhammer\")\n",
+    "elif x > 106:\n",
+    "    print(\"Quieter than jackhammer, louder than gas lawnmower\")\n",
+    "elif x == 106:\n",
+    "    print(\"As loud as gas lawnmower\")\n",
+    "elif x > 70:\n",
+    "    print(\"Quieter than gas lawn mower, louder than alarm clock\")\n",
+    "elif x == 70: \n",
+    "    print(\"As loud as Alarm Clock\")\n",
+    "elif x > 40: \n",
+    "    print(\"Quieter than Alarm Clock, louder than Quiet Room\")\n",
+    "elif x == 40: \n",
+    "    print(\"As loud as quiet room\")\n",
+    "else:\n",
+    "    print(\"Quieter then Quiet Room\")"
    ]
   },
   {
@@ -227,12 +287,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "679c4ad5-81eb-428d-9665-309ed2c4f870",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "Long\n",
+      "Time\n",
+      "Ago\n",
+      "In\n",
+      "A\n",
+      "Galaxy\n",
+      "Far\n",
+      "Far\n",
+      "Away\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-print-loop"
+    "#si-print-loop\n",
+    "for i in [\"A\",\"Long\",\"Time\",\"Ago\",\"In\",\"A\",\"Galaxy\",\"Far\",\"Far\",\"Away\"]:\n",
+    "    print(i)"
    ]
   },
   {
@@ -310,9 +389,25 @@
    "execution_count": null,
    "id": "42ba7d49-bd42-4073-8594-520ecf4347fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 14, 24, 34, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 54, 64, 74, 84, 94, 104, 114, 124, 134, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 154, 164, 174, 184, 194, 204, 214, 224, 234, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 254, 264, 274, 284, 294, 304, 314, 324, 334, 340, 341, 342, 343, 344, 345, 346, 347, 348, 349, 354, 364, 374, 384, 394, 400, 401, 402, 403, 404, 405, 406, 407, 408, 409, 410, 411, 412, 413, 414, 415, 416, 417, 418, 419, 420, 421, 422, 423, 424, 425, 426, 427, 428, 429, 430, 431, 432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447, 448, 449, 450, 451, 452, 453, 454, 455, 456, 457, 458, 459, 460, 461, 462, 463, 464, 465, 466, 467, 468, 469, 470, 471, 472, 473, 474, 475, 476, 477, 478, 479, 480, 481, 482, 483, 484, 485, 486, 487, 488, 489, 490, 491, 492, 493, 494, 495, 496, 497, 498, 499, 504, 514, 524, 534, 540, 541, 542, 543, 544, 545, 546, 547, 548, 549, 554, 564, 574, 584, 594, 604, 614, 624, 634, 640, 641, 642, 643, 644, 645, 646, 647, 648, 649, 654, 664, 674, 684, 694, 704, 714, 724, 734, 740, 741, 742, 743, 744, 745, 746, 747, 748, 749, 754, 764, 774, 784, 794, 804, 814, 824, 834, 840, 841, 842, 843, 844, 845, 846, 847, 848, 849, 854, 864, 874, 884, 894, 904, 914, 924, 934, 940, 941, 942, 943, 944, 945, 946, 947, 948, 949, 954, 964, 974, 984, 994]\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-fours"
+    "#si-fours\n",
+    "fours = []\n",
+    "for i in range(1001):\n",
+    "    addI = False\n",
+    "    for y in str(i):\n",
+    "        if y == \"4\":\n",
+    "            addI = True\n",
+    "    if addI == True:\n",
+    "        fours.append(i)\n"
    ]
   },
   {
@@ -360,7 +455,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#si-while-loop"
+    "#si-while-loop\n",
+    "x = 432\n",
+    "while x > 100:\n",
+    "    x -= 10\n",
+    "\n"
    ]
   },
   {
@@ -468,9 +567,24 @@
    "execution_count": null,
    "id": "c7b4c421-59d4-467d-8675-805b55715d7f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-prime"
+    "#si-prime\n",
+    "def isPrime(inte):\n",
+    "\n",
+    "    for i in range(2,inte-1):\n",
+    "        if inte % i == 0:\n",
+    "            return False\n",
+    "    return True\n"
    ]
   },
   {
@@ -487,12 +601,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cd8f1a7a-d9cf-4498-a677-e17d64d0eea0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#si-taxi"
+    "#si-taxi\n",
+    "def taxiPrice(distance):\n",
+    "    return 4+ ((distance*1000) // 140)*0.25"
    ]
   },
   {
@@ -545,9 +661,24 @@
    "execution_count": null,
    "id": "9d3b9a2b-248e-4fda-b9a5-8adbc43cc2d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "#si-fibonacci"
+    "#si-fibonacci\n",
+    "\n",
+    "def fib(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    return fib(n-1)+fib(n-2)\n"
    ]
   },
   {
@@ -677,7 +808,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -691,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
