--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -608,7 +608,7 @@
    "source": [
     "#si-taxi\n",
     "def taxiPrice(distance):\n",
-    "    return 4.25+ ((distance*1000) // 140)*0.25"
+    "    return 4.25+ ((distance*1000) / 140)*0.25"
    ]
   },
   {
